# MasterThesisCpp

./: .gitignore  CMakeLists.txt  citation.cff  coef.param  functions.cpp  functions.h  fv_bench_kinetic.txt  gascoigne.param  loop.cc  loop.h  main.cc  myequation.cc  myequation.h  problem.h  random.sh  solver.cc  solver.h
